--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -6,7 +6,7 @@
 #    By: eryudi-m <eryudi-m@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/09/26 00:53:18 by eryudi-m          #+#    #+#              #
-#    Updated: 2022/10/02 17:19:17 by eryudi-m         ###   ########.fr        #
+#    Updated: 2022/10/02 19:25:50 by eryudi-m         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,17 +17,18 @@ NAME = so_long
 CC = clang -c
 FLAGS = -Wall -Wextra -Werror
 AR = ar -rcs
+
+#Debugging
 VALGRIND =	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes
 
 #Paths
-PATH_APP = ./app
-PATH_IMG = ./img
-PATH_INC = ./inc
-PATH_MAP = ./map
-PATH_SRC = ./src
-PATH_UTIL = ./util
+PATH_APP = ./app/
+PATH_INC = ./inc/
+PATH_MAP = ./map/
+PATH_SRC = ./src/
+PATH_UTIL = ./util/
 PATH_LIBFT = ./util/libft/
-PATH_OBJ = ./obj
+PATH_OBJ = ./obj/
 
 #MLXFLAGS = -lmlx -lXext -lX11
 
@@ -35,35 +36,41 @@ SRC_FILES = load_map.c
 
 SOURCES = $(addprefix $(PATH_SRC), $(SRC_FILES))
 OBJ_FILES = $(patsubst %.c, %.o, $(SRC_FILES))
-OBJECTS = $(addprefix $(OBJS_PATH), $(OBJ_FILES))
+OBJECTS = $(addprefix $(PATH_OBJ), $(OBJ_FILES))
 
 #Bash commandas
 MKDIR = mkdir -p
 RM = rm -f
+MAKE_NOPRINT = $(MAKE) --no-print-directory
 
 #TARGETS
-all: libft ($NAME)
+all: libft $(NAME)
 
 libft:
-	cd $(PATH_LIBFT) && $(MAKE) all
+	@cd $(PATH_LIBFT) && $(MAKE_NOPRINT)
 
 $(NAME): $(OBJECTS)
-	cp $(PATH_LIBFT)/libft.a $(PATH_UTIL)$NAME
+	cp $(PATH_LIBFT)libft.a $(PATH_UTIL)$(NAME)
+	ar -rcs $(PATH_LIBFT)$(NAME) $(OBJECTS)
 
-
-
-$(PATH_OBJ)%.o : $(PATH_SRC).c $(PATH_INC)*.h
-	$(MKDIR) $(PATH_OBJ)
-#$(CC) $(FLAGS) $(MLXFLAGS) -c %< -I $(PATH_INC) -o $@
-	$(CC) $(FLAGS) -c %< -I $(PATH_INC) -o $@
+$(PATH_OBJ)%.o : $(PATH_SRC)%.c $(PATH_INC)*.h
+	mkdir -p $(PATH_OBJ)
+	$(CC) $(FLAGS) -c $< -I $(PATH_INC) -o $@
 	$(MAKE) -C
+
+#$(CC) $(FLAGS) $(MLXFLAGS) -c $< -I $(PATH_INC) -o $@
 #$(MAKE) -C $(MINILBIX_PATH)
 
 main: ./app/app.c
-	@
-
-
+	@$(MKDIR) $(PATH_APP)
+	$(CC) $(FLAGS) $(OBJECTS) $< $(PATH_LIBFT)$(NAME) -I $(PATH_INC) - o $(PATH_APP)$(NAME)
 
 clean:
-	cd $(PATH_LIBFT) && $(MAKE) clean
+	@cd $(PATH_LIBFT) && $(MAKE) clean
 
+fclean: clean
+	@cd $(PATH_LIBFT) && $(MAKE) fclean
+
+re: fclean all
+
+.PHONY: all clean fclean re make_dir
