validate_file_format

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Prerequisites
 *.d
 
+
 # Object files
 *.o
 *.ko
@@ -50,3 +51,6 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+#Others
+./so_long/bin/
