OV42-126 - read map file function

--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -42,7 +42,7 @@ SRC_FILES = so_long.c \
 			validate_extension.c \
 			load_map.c \
 			handle.c \
-			load_image.c
+			load_sprite.c
 
 SOURCES = $(addprefix $(PATH_SRC), $(SRC_FILES))
 OBJ_FILES = $(patsubst %.c, %.o, $(SRC_FILES))
