fixed background color & prototype W movement

--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -6,7 +6,7 @@
 #    By: eryudi-m <eryudi-m@student.42sp.org.br>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/09/26 00:53:18 by eryudi-m          #+#    #+#              #
-#    Updated: 2022/10/10 01:56:46 by eryudi-m         ###   ########.fr        #
+#    Updated: 2022/10/10 02:19:14 by eryudi-m         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -50,6 +50,7 @@ SRC_FILES = so_long.c \
 			load_map.c \
 			load_sprite.c \
 			draw_map.c \
+			player_movement.c \
 			handle.c \
 			error.c
 
